# Otus-Algorithm-2025-06

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Otus-Algorithm-2025-06-hw-01/: CMakeLists.txt  GlobalSettings.h  Otus_Algorithm_hw_01.cpp  Printer.cpp  Printer.h  README.md  Strategy.cpp  Strategy25ChatGptAi_Printer.cpp
hw-02-lucky-tickets/:  FileReader.cpp  CMakeLists.txt  Counter.h  LuckyTicketCounter.cpp  LuckyTicketCounter.h  README.md  TestAssert.cpp  TestAssert.h  TestParam.cpp  TestParam.h  TestParamLoader.cpp  TestParamLoader.h  TestRunner.cpp  TestRunner.h  TestSettings.h  main.cpp
hw-03-algebraic-algorithms/: CMakeLists.txt  README.md  main.cpp
hw-03-algebraic-algorithms/cmake/: AutoGenerateTests.cmake  GenerateTests.cmake  README.md
hw-03-algebraic-algorithms/data/: test_cases.csv
hw-03-algebraic-algorithms/include/: BinaryPowerCalculator.h  BruteForcePrimeCounter.h  Counter.h
hw-03-algebraic-algorithms/info/: Алгебраические_алгоритмы.pptx  Представление_чисел.pptx
hw-03-algebraic-algorithms/src/: BruteForcePrimeCounter.cpp  GoldenRatioFibCounter.cpp
hw-03-algebraic-algorithms/tests/: AlgebraicAlgorithmsTests.cpp  CMakeLists.txt  README.md
hw-04-array-queue/: CMakeLists.txt
hw-04-array-queue/benchmarks/: Benchmark.cpp  Benchmark.h
hw-04-array-queue/include/: Array.h  DoublyLinkedList.h  FactorArray.h  LinkedList.h  MatrixArray.h  SingleArray.h  VectorArray.h
hw-04-array-queue/src/: FactorArray.cpp  MatrixArray.cpp  SingleArray.cpp  VectorArray.cpp  main.cpp
hw-04-array-queue/tests/: CMakeLists.txt  FactorArrayTest.cpp  MatrixArrayTest.cpp  SingleArrayTest.cpp  VectorArrayTest.cpp
hw-05-bits/: CMakeLists.txt
hw-05-bits/include/: King.h  Knight.h  Moveable.h
hw-05-bits/src/: King.cpp  Knight.cpp
hw-05-bits/tests/: KnightTest.cpp
